Add test for jobmapper and remove unnecessary model classes